All changes done

--- a/about.html
+++ b/about.html
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html"> Service</a>
+                <a class="nav-link" href="service.html"> Workflow</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="company.html"> Company </a>
@@ -217,13 +217,15 @@
       <div class="row  mb-3 pb-4">
         <div class="col-md-3 info_logo">
           <div class="logo-box">
-            <img src="images/logo-white.png" alt="">
+            <img src="images/logo1.png" alt="">
             <span>
               ReClick
             </span>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
+            Our step towards a better future.
+            <br>
+            A step towards a better generation
           </p>
 
         </div>
