--- a/company.html
+++ b/company.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Transportz</title>
+  <title>ReClick</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -38,9 +38,9 @@
         <nav class="navbar navbar-expand-lg custom_nav-container d-lg-none">
           <a class="navbar-brand" href="#">
             <div class="logo-box">
-              <img src="images/logo.png" alt="">
+              <img src="images/logo1.png" alt="">
               <span>
-                Transportz
+                ReClick
               </span>
             </div>
           </a>
@@ -74,9 +74,9 @@
         </nav>
         <div class="header_container ">
           <div class="logo-box">
-            <img src="images/logo.png" alt="">
+            <!-- <img src="images/logo1.png" alt=""> -->
             <span>
-              Transportz
+              ReClick
             </span>
           </div>
           <div>
@@ -88,7 +88,7 @@
                     <img src="images/phone.png" alt="" />
                   </div>
                   <span>
-                    (+71) 258964785
+                    (+91) 8522369417
                   </span>
                 </a>
                 <a href="" class="ml-4">
@@ -96,7 +96,7 @@
                     <img src="images/mail.png" alt="" />
                   </div>
                   <span>
-                    transportz@gmail.com
+                    reclick@gmail.com
                   </span>
                 </a>
               </div>
@@ -185,11 +185,9 @@
                   Company
                 </h3>
                 <p>
-                  Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                  classical
-                  Latin literature from 45 BC, making it over 2000 yearsContrary to popular belief, Lorem Ipsum is not
-                  simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over
-                  2000 years
+                  In contrast to the various waste picking services, ReClick comes up with the idea of managing the waste products efficoently and safely with the aim of becoming a medium between the garbage pickers and the common people.
+                ReClick not only manages the waste products in a great way but has also been trying to keep the environment clean and hygeine putting it's step towards a sustainable future.
+                ReClick allows you to be just a click away from maintaining a green country and hence a clean country.  
                 </p>
               </div>
             </div>
@@ -217,13 +215,15 @@
       <div class="row  mb-3 pb-4">
         <div class="col-md-3 info_logo">
           <div class="logo-box">
-            <img src="images/logo-white.png" alt="">
+            <img src="images/logo1.png" alt="">
             <span>
-              Transportz
+              ReClick
             </span>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
+            Our step towards a better future.
+            <br> 
+            A step towards a better generation
           </p>
           <div class="info_social">
             <div>
@@ -253,18 +253,18 @@
             Address
           </h5>
           <p>
-            Healing Center, 176 W Street name,
-            New York, NY 10014, US
+            DIT University, Mussoorie Diversion Road
+            Makka Wala, Dehradun, Uttarakhand, India
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
             <a href="">
-              transportz@gmail.com
+              reclick@gmail.com
             </a>
           </p>
         </div>
@@ -327,8 +327,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2022 All Rights Reserved By
+      <a href="https://html.design/">ReClick Pvt. Ltd.</a>
     </p>
   </section>
   <!-- footer section -->
