--- a/service.html
+++ b/service.html
@@ -12,7 +12,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
 
-  <title>Transportz</title>
+  <title>ReClick</title>
 
   <!-- slider stylesheet -->
   <link rel="stylesheet" type="text/css"
@@ -38,9 +38,9 @@
         <nav class="navbar navbar-expand-lg custom_nav-container d-lg-none">
           <a class="navbar-brand" href="#">
             <div class="logo-box">
-              <img src="images/logo.png" alt="">
+              <img src="images/logo1.png" alt="">
               <span>
-                Transportz
+                ReClick
               </span>
             </div>
           </a>
@@ -74,9 +74,9 @@
         </nav>
         <div class="header_container ">
           <div class="logo-box">
-            <img src="images/logo.png" alt="">
+            <!-- <img src="images/logo1.png" alt=""> -->
             <span>
-              Transportz
+              ReClick
             </span>
           </div>
           <div>
@@ -88,7 +88,7 @@
                     <img src="images/phone.png" alt="" />
                   </div>
                   <span>
-                    (+71) 258964785
+                    (+91) 8522369417
                   </span>
                 </a>
                 <a href="" class="ml-4">
@@ -96,7 +96,7 @@
                     <img src="images/mail.png" alt="" />
                   </div>
                   <span>
-                    transportz@gmail.com
+                    reClick@gmail.com
                   </span>
                 </a>
               </div>
@@ -176,7 +176,7 @@
     <div class="container">
       <div class="d-flex justify-content-center">
         <h2 class="heading_style">
-          Our Services
+          Our Workflow
         </h2>
       </div>
       <div class="row layout_padding2-top">
@@ -185,15 +185,14 @@
             <img src="images/service-1.jpg" alt="">
             <div class="d-flex">
               <h3>
-                CARGO
-
+                Waste Generation
               </h3>
             </div>
           </div>
           <div class="service-detail">
             <p>
-              aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur.Excepteur
+              The very first step is the generation of waste at different sources.
+              Waste is generated at different sources and accordingly the second step is carried out.
             </p>
             <div class="d-flex justify-content-end">
               <a href="" class="service-btn">
@@ -207,16 +206,14 @@
             <img src="images/service-2.jpg" alt="">
             <div class="d-flex">
               <h3>
-                LOGISTIC SERVICE
-
-
+                Request for Pickup
               </h3>
             </div>
           </div>
           <div class="service-detail">
             <p>
-              aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur.Excepteur
+              The second step involves requesting pickup service through the website to initiate the process further.
+              The pickup request is done through the official website of ReClick.
             </p>
             <div class="d-flex justify-content-end">
               <a href="" class="service-btn">
@@ -230,16 +227,53 @@
             <img src="images/service-3.jpg" alt="">
             <div class="d-flex">
               <h3>
-                STORAGE
-
-
+                Attendant Responds
               </h3>
             </div>
           </div>
           <div class="service-detail">
             <p>
-              aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum
-              dolore eu fugiat nulla pariatur.Excepteur
+              Once the pickup is requested, the nearest attendant responds to the request and is appointed to carry out the process further. The attendant goes to the location accordingly.
+            </p>
+            <div class="d-flex justify-content-end">
+              <a href="" class="service-btn">
+                See More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service_img-box s-b-4">
+            <img src="images/service-4.jpg" alt="">
+            <div class="d-flex">
+              <h3>
+                Segregation
+              </h3>
+            </div>
+          </div>
+          <div class="service-detail">
+            <p>
+              Next up, is the segregation of waste products. Once the attendant reaches the location, the segregation of waste is done by the attendant according to the type of waste collected.
+            </p>
+            <div class="d-flex justify-content-end">
+              <a href="" class="service-btn">
+                See More
+              </a>
+            </div>
+          </div>
+        </div>
+        <div class="col-md-4">
+          <div class="service_img-box s-b-5">
+            <img src="images/service-5.jpg" alt="">
+            <div class="d-flex">
+              <h3>
+                Transportation
+              </h3>
+            </div>
+          </div>
+          <div class="service-detail">
+            <p>
+              Lastly, the segregated waste is carried forward to the specified treatement plant for recycling them accordingly so as to assure a safe and sustainable future.
             </p>
             <div class="d-flex justify-content-end">
               <a href="" class="service-btn">
@@ -262,13 +296,15 @@
       <div class="row  mb-3 pb-4">
         <div class="col-md-3 info_logo">
           <div class="logo-box">
-            <img src="images/logo-white.png" alt="">
+            <img src="images/logo1.png" alt="">
             <span>
-              Transportz
+              ReCLick
             </span>
           </div>
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedconsectetur
+            Our step towards a better future.
+            <br> 
+            A step towards a better generation
           </p>
           <div class="info_social">
             <div>
@@ -298,18 +334,18 @@
             Address
           </h5>
           <p>
-            Healing Center, 176 W Street name,
-            New York, NY 10014, US
+            DIT University, Mussoorie Diversion Road
+            Makka Wala, Dehradun, Uttarakhand, India
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
-            (+71) 8522369417
+            (+91) 8522369417
           </p>
           <p>
             <a href="">
-              transportz@gmail.com
+              reclick@gmail.com
             </a>
           </p>
         </div>
@@ -372,8 +408,8 @@
   <!-- footer section -->
   <section class="container-fluid footer_section">
     <p>
-      Copyright &copy; 2019 All Rights Reserved By
-      <a href="https://html.design/">Free Html Templates</a>
+      Copyright &copy; 2022 All Rights Reserved By
+      <a href="https://html.design/">ReClick Pvt. Ltd.</a>
     </p>
   </section>
   <!-- footer section -->
