--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <a class="nav-link" href="about.html"> About </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="service.html"> Service</a>
+                <a class="nav-link" href="service.html"> Workflow</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="company.html"> Company </a>
@@ -437,7 +437,7 @@
               <div class="col-md-6">
                 <div class="client_box c-b-1">
                   <div class="client_img">
-                    <img src="images/client.png" alt="" class="img-fluid">
+                    <img src="images/imageedit_3_8870373629.png" alt="" class="img-fluid">
                   </div>
                   <div class="client_detail">
                     <h5>
@@ -454,7 +454,7 @@
               <div class="col-md-6">
                 <div class="client_box c-b-2">
                   <div class="client_img">
-                    <img src="images/client.png" alt="" class="img-fluid">
+                    <img src="images/imageedit_6_6425928924.png" alt="" class="img-fluid">
                   </div>
                   <div class="client_detail">
                     <h5>
@@ -493,7 +493,7 @@
               <div class="col-md-6">
                 <div class="client_box c-b-2">
                   <div class="client_img">
-                    <img src="images/client.png" alt="" class="img-fluid">
+                    <img src="images/imageedit_1_9596707765.png" alt="" class="img-fluid">
                   </div>
                   <div class="client_detail">
                     <h5>
